ingress2/nginx-ingress.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-t
  labels:
    app: nginx-ingress-t
spec:
  selector:
    matchLabels:
      app: nginx-ingress-t
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-ingress-t
    spec:
      containers:
        - name: nginx-ingress-t
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-t-svc
spec:
  selector:
    app: nginx-ingress-t
  ports:
    - port: 8080
      targetPort: 80
  type: ClusterIP
