ingress2/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: ingress2.dockerplay.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: docker-hello-world-svc
              port:
                number: 8088
#  - host: ingress.dockerplay.com
#    http:
#      paths:
#        - path: /
#          pathType: Prefix
#          backend:
#            service:
#              name: docker-hello-world-svc
#              port:
#                number: 8088
  - host: ingress.dockerplay.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-ingress-t-svc
              port:
                number: 8080
